refactor: clean up formatting and improve readability in GameController